--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,9 +13,9 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/index.html",
   "display": "fullscreen",
-  "orientation": "landscape",
+  "orientation": "portrait",
   "background_color": "#000000",
   "theme_color": "#4DBA87"
 }
